# llm_deliberation_values

./: .gitignore  README.md  pyproject.toml
figures/: figure_3_way_n_rounds.ipynb  figure_delib_outcomes.ipynb  figure_system_prompt_change.ipynb  figure_value_dist.ipynb  figure_value_sims.ipynb  figure_verdicts.ipynb
prompts/: identify_values_dilemma.txt  round_robin_3way.txt  round_robin_h2h.txt  sync_delib_h2h.txt  sync_delib_h2h_so.txt  sync_delib_h2h_v2.txt  sync_delib_h2h_v3.txt
scripts/: asynchronous_h2h_deliberation.py  round_robin_h2h_deliberation.py  value_classify_batch.py  value_gather_batch.py
src/llm_deliberation/: async_delib.py  batch_deliberation.py  batches.py  deliberation.py  multilevel.py  processing.py  round_robin_delib.py  utils.py  values.py
