[project]
name = "llm_deliberation"
version = "0.0.1"
description = "Value Assessment of LLMs in Deliberation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aim>=3.29.1",
    "anthropic>=0.60.0",
    "autogen>=0.9.7",
    "autogen-agentchat>=0.7.1",
    "autogen-ext[azure,openai]>=0.7.1",
    "datasets>=4.0.0",
    "google-genai>=1.28.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "lab>=8.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "outlines>=1.1.1",
    "pandas>=2.3.1",
    "pyprojroot>=0.3.0",
    "pyqt6>=6.9.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
